@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0


class Article {
-id : nom
-titre : string
-contenu : text
-createdAt : dateTime
-slug : slug
-publication : bool
}

class Categorie {
-id : int
-titre : titre
-slug : slug
}
Categorie "0..1"--"0..*" Article

class Commentaire {
-id : int
-contenu : text
-dateCreation : dateTime
}
Commentaire "0..*"--"1..1" Article

class Utilisateur {
-id : int
-prenom : string
-nom : string
-pseudo : string
}
Commentaire "0..*"--"1..1" Utilisateur

@enduml